# DB_parser

./: README.md  config.py  db_manager_class.py  employers_ids.txt  hh_api_class.py  main.py  pyproject.toml  sql_executor_class.py  sql_funcs.py
sql_scripts/: create_db.sql  fill_employers_script_template.sql  get_avg_salary.sql
src/: config.py  interaction.py  main.py
src/classes/: db_manager_class.py  hh_api_class.py  sql_executor_class.py
src/sql_scripts/: create_db.sql  fill_template.sql  get_all_vacancies.sql  get_companies_and_vacs_count.sql  get_higher_salary_vacs.sql  get_vacancies_with_kw.sql
